--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-     "start": "node index.js"
+    "start": "node index.js"
   },
   "author": "shelian",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-fetch": "^2.7.0",
-    "express": "^4.18.2"
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
   }
 }
