--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_CLIENT_ID=f41eeab0f1f14ddea319c9dc145e06e5
-VITE_REDIRECT_URI=https://vibelytics.vercel.app/callback
+VITE_REDIRECT_URI=https://vibelytics.onrender.com/auth/callback
 VITE_SPOTIFY_AUTH_ENDPOINT=https://accounts.spotify.com/authorize
