--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 SPOTIFY_CLIENT_ID=f41eeab0f1f14ddea319c9dc145e06e5
 SPOTIFY_CLIENT_SECRET=46b9c4ec8eb742f28f1584ba9fe91f3c
-REDIRECT_URI=https://vibelytics.onrender.com/auth/callback
+# REDIRECT_URI=https://vibelytics.onrender.com/auth/callback
 FRONTEND_URI=https://vibelytics.vercel.app
+REDIRECT_URI=https://vibelytics.vercel.app/callback
